# temperature-prediction

./: .dockerignore  .gitignore  Makefile  README.md  code.code-workspace  data.dvc  docker-compose.yaml  dockerfile_fastapi.dockerignore  dockerfile_mlflow.dockerignore  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
.envs/: .mlflow  .mlflow_auth  .postgres
.github/workflows/: build.yaml  ci-cd.yaml  ci.yaml
app/: main.py  requirements.txt
app/configs/: config.yaml
app/src/: clean.py  load.py  predict.py  train.py
docker/: dockerfile  dockerfile_fastapi  dockerfile_mlflow  dockerfile_mlflow_cloud_run
docker/scripts/: start-mlflow-tracking-server.sh  startup-script.sh
helm/fastapi/: test.yaml  values.yaml
helm/fastapi/templates/: deployment.yaml  secret.yaml
helm/mlflow/: Chart.yaml  values.yaml
helm/mlflow/templates/: deployment.yaml  secret.yaml
kubernetes/: deployment.yaml  fastapi-deployment.yaml  fastapi-service.yaml  ingress.yaml  mlflow-auth-secret.yaml  mlflow-deployment.yaml  mlflow-server-secret.yaml  mlflow-service.yaml  postgres-deployment.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulSet.yaml  service.yaml
kubernetes/fastapi/: fastapi-deployment.yaml
kubernetes/mlflow/: mlflow-deployment.yaml
kubernetes/mlflow-postgres-db/: postgres-deployment.yaml  postgres-pv-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
models/: DecisionTreeRegressor.pkl  LinearRegression.pkl
tests/: test_clean.py  test_clean_data.py  test_train.py
web-app/: server.py
