[tool.poetry]
name = "temperature-predictor"
version = "0.1.0"
description = ""
authors = ["Nour Bouzouita <nourelhouda.bouzouita@gmail.com>"]
readme = "README.md"
packages = [{include = "temperature_prediction"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "~=1.10"
pandas = "~=2.2"
dvc = {version = "~=3.55.2", extras = ["gdrive","gs"]}
joblib = "~=1.4"
mlflow = "==2.18.0"
psycopg2-binary = "~=2.9"
scikit-learn = "~=1.5"
fastapi = "~=0.104"
uvicorn = {version = "~=0.24", extras=["standard"]}
google-cloud-storage = "~=2.18"
gcsfs = "~=2024.10.0"
functions-framework = "^3.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "~=7.3"
black = "~=23.3"
isort = "~=5.13"
flake8 = "~=7.1"
mypy = "~=1.13"
flake8-bugbear = "^24.10.31"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
indent = 4
lines_between_types = 1
known_first_party = ["temperature_prediction"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = 3.10
show_error_codes = true
ignore_missing_imports = true
install_types = true
non_interactive = true
follow_imports = "silent"
no_strict_optional = true

warn_redundant_casts = false
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
warn_no_return = true
warn_incomplete_stub = true

disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true

verbosity = 0

